--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--li><a href="#usersalbums"><i class="fa fa-shield"></i>My Albums</a></li-->
         <li><a href="#albums"><i class="fa fa-shield"></i> Albums</a></li>
         <li><a href="#addUser"><i class="fa fa-comment"></i>SigUp</a></li>
-        <li><a href="#login"><i class="fa fa-comment"></i>LogIn</a></li>
+        <li><a href="#login"><i class="fa fa-comment"></i>SigIn</a></li>
         <li><a href="#logout"><i class="fa fa-comment"></i>LogOut</a></li>
         
         
