--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="navbar-brand" href="/">Missing cards </a>
       </div>
       <ul class="nav navbar-nav navbar-right" >
-        <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+        <li><a href="#home"><i class="fa fa-home"></i> Home</a></li>
         <li><a href="#users"><i class="fa fa-shield"></i>Users</a></li>
         <!--li><a href="#usersalbums"><i class="fa fa-shield"></i>My Albums</a></li-->
         <li><a href="#albums"><i class="fa fa-shield"></i> Albums</a></li>
